# sumo-framework

./: .gitignore  README.md  pyproject.toml
experiments/: cyclic_max_pressure_msc.py  noncyclic_maxpressure_msc.py  ql_msc_choose.py  ql_msc_schedule.py  ql_msc_switch.py
experiments/nets/Moscow/: routes_atlasova.rou.xml  routes_chumakova.rou.xml  routes_habarova.rou.xml  routes_moskvitina.rou.xml  routes_valuevskoe.rou.xml  tls_cycles.day.add.xml  tls_cycles.evening.add.xml  tls_cycles.morning.add.xml  tls_cycles_cl_0.add.xml  tls_cycles_cl_1.add.xml  tls_cycles_cl_2.add.xml  tls_cycles_cl_3.add.xml
experiments/outputs/: plot.py
experiments/outputs/msc_choose/: ql-msc_run1_choose_next_phase_mode_conn0_ep1.csv  ql-msc_run1_choose_next_phase_mode_conn0_ep10.csv  ql-msc_run1_choose_next_phase_mode_conn0_ep2.csv  ql-msc_run1_choose_next_phase_mode_conn0_ep3.csv  ql-msc_run1_choose_next_phase_mode_conn0_ep4.csv  ql-msc_run1_choose_next_phase_mode_conn0_ep5.csv  ql-msc_run1_choose_next_phase_mode_conn0_ep6.csv  ql-msc_run1_choose_next_phase_mode_conn0_ep7.csv  ql-msc_run1_choose_next_phase_mode_conn0_ep8.csv  ql-msc_run1_choose_next_phase_mode_conn0_ep9.csv
experiments/outputs/msc_switch/: ql-msc_run1_switch_mode_conn0_ep1.csv  ql-msc_run1_switch_mode_conn0_ep10.csv  ql-msc_run1_switch_mode_conn0_ep2.csv  ql-msc_run1_switch_mode_conn0_ep3.csv  (+6 more)
sumo_framework/: __init__.py
sumo_framework/agents/: __init__.py  ql_agent.py
sumo_framework/environment/: __init__.py  edge.py  env.py  observer.py  traffic_controller.py
sumo_framework/util/: general_edge_utils.py
